app/assets/stylesheets/species/additions.scss
.emb-link {
  cursor: pointer;
  cursor: hand;
}

span.distrib_reference {
  padding: 3px 0;
  display: block;
}

#match-info {
  color: #243748;
  font-size: 16px;
  border-bottom: 1px solid #6B93AF;
  border-top: 1px solid #6B93AF;
  padding: 15px 0 15px 30px;
  text-align: left;
  background: #8FB7CF;

  i {
    font-style: italic;
  }
}

.container {
	.result-block {
		padding: 80px 0;
		margin-top: -18px;
		p {
			font-size: 16px;
			font-weight: normal;
			line-height: 24px;
			color: #999;
			text-align: left;
			margin: 0 171px 0 171px;
			&.no-results-title {
				font-size: 20px;
				font-weight: bold;
				margin-bottom: 5px;
				color: #666;
			}
			&.no-results-subtitle {
				font-size: 16px;
				font-weight: normal;
				margin-bottom: 30px;
				color: #666;
			}
		}
	}
}

